h2. Change Log

Also see the "release notes of underlying morphia library":http://code.google.com/p/morphia/wiki/ReleaseNotes and the GORM-MongoDB "User Guide":http://jkuehn.github.com/gorm-mongodb/

h3. v0.7 - upcoming
* -

h3. v0.6.3 - 2011-02-25
* "GRAILSPLUGINS-2902":http://jira.codehaus.org/browse/GRAILSPLUGINS-2902 Embedded Classes should by default not get @Id injected

h3. v0.6.2 - 2011-02-24
* "GRAILSPLUGINS-2895":http://jira.codehaus.org/browse/GRAILSPLUGINS-2895 recursive check of ancestors to support inherited nesting

h3. v0.6.1 - 2011-02-24
* "GRAILSPLUGINS-2895":http://jira.codehaus.org/browse/GRAILSPLUGINS-2895
** Subclasses don't get the id injected automatically anymore - if the superclass is also managed by the plugin
** You can control the autoinjection process by using the grails.plugins.mongodb.ast.TransformationConfiguration annotation

h3. v0.6 - 2011-02-19
* *PLUGIN RENAMED*: now you will find this plugin as 'mongodb-morphia' in the grails repository
* *breaking change* findByX is no longer synonym for findAllByX, but for findOneByX. So findByX now returns only the first result, and is consistent with find() and findAll() methods.
* support for replica sets
* implemented the beforeValidate event introduced in "grails 1.3.6":http://grails.org/1.3.6+Release+Notes
* updated morphia library to *0.99*

h3. v0.5.4 - 2010-12-10
* support for getAll method
* support for countAll method
* updated morphia library to *0.98*

h3. v0.5.3 - 2010-11-30
* updated morphia library to *0.97*

h3. v0.5.2 - 2010-11-26
* updated morphia library to *0.96*
* added static collection property to access the unterlying mongodb collection
* added addTo* methods support
* by default the classname is not stored for every document anymore. Add annotation @com.google.code.morphia.annotations.Entity(noClassnameStored=false) to enable manually

h3. v0.5.1 - 2010-10-03
* added static update method

h3. v0.5 - 2010-09-15