@@ -10,7 +10,7 @@ Classes that should be mapped have to be put into the grails-app/mongo directory
 
 h3. Dependency Injection
 
-Mapped MongoDB entities are autowires as described in the "Grails user guide":http://grails.org/doc/1.3.x/guide/8.%20The%20Service%20Layer.html#8.3%20Dependency%20Injection%20and%20Services
+Mapped MongoDB entities are autowired as described in the "Grails user guide":http://grails.org/doc/1.3.x/guide/8.%20The%20Service%20Layer.html#8.3%20Dependency%20Injection%20and%20Services
 
 {code}
 class Car {
