@@ -2,8 +2,13 @@ h2. Change Log
 
 Also see the "release notes of underlying morphia library":http://code.google.com/p/morphia/wiki/ReleaseNotes and the GORM-MongoDB "User Guide":http://jkuehn.github.com/gorm-mongodb/
 
-h3. v0.7 - upcoming
-* -
+h3. v0.7 - 2011-02-27
+* an "ObjectFactory":http://morphia.googlecode.com/svn/site/morphia/apidocs/com/google/code/morphia/ObjectFactory.html is used to create domain instances. Now all domain objects are autowired automatically, also those returned by find* and list methods.
+* makeKey method is now deprecated, please use createKey instead
+* new instance method: createDBRef
+* countAll is now deprecated, please use count instead
+* added fromDBObject and toDBObject methods
+* added fetch() method to com.google.code.morphia.Key class
 
 h3. v0.6.3 - 2011-02-25
 * "GRAILSPLUGINS-2902":http://jira.codehaus.org/browse/GRAILSPLUGINS-2902 Embedded Classes should by default not get @Id injected
